# baam

./: .gitignore  README.md  pyproject.toml
baam/hid/: __init__.py  hid.py  reportbuilder.py
baam/hid/ble/: advertiser.py
baam/hid/bluetooth/: __init__.py  advertiser.py  bluetooth.py  constants.py  passkey.py  reportbuilder.py  secret.py
baam/hid/serial/: serial.py  stdout.py
baam/hid/usb/: __init__.py  reportbuilder.py  usb.py
baam/keyboard/: constants.py  keyboard.py  layer.py  matrix.py
baam/tests/hid/bluetooth/: test_advertiser.py
core/hid/: hid.py
core/hid/ble/: bluetooth.py
core/keyboard/layouts/: ansi.py
keyboards/baamboard/: baamboard.py  boot.py  hw.py  spec.py
keyboards/baamboard-proto/: baamboard.py  boot.py  spec.py
scripts/: keycode2py.js
scripts/qmkKeycode2py/: .gitignore  qmkKeycode2py.js
