[tool.poetry]
name = "baam"
version = "0.1.0"
description = "A keyboard firware powered by python"
authors = ["Hoongeun Cho <me@hoongeun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
isort = "^5.11.4"
pyright = "^1.1.290"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
